--- a/main.html
+++ b/main.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Profile</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>John Doe</h1>
+    </header>
+
+    <section class="contact">
+        <h2>Name</h2>
+        <p>John Doe</p>
+
+        <h2>Email</h2>
+        <p>john.doe@example.com</p>
+    </section>
+
+    <section class="profile">
+        <h2>Profile</h2>
+        <p>Web Developer</p>
+    </section>
+
+    <section class="about">
+        <h2>About Me</h2>
+        <p>I am a passionate web developer with a strong foundation in front-end and back-end technologies. I enjoy creating user-friendly, interactive websites and have experience working in agile teams.</p>
+    </section>
+
+    <section class="skills">
+        <h2>Skills</h2>
+        <div class="skill">
+            <span class="skill-name">HTML</span>
+            <div class="progress">
+                <div class="progress-bar" style="width: 90%;"></div>
+            </div>
+            <span class="percentage">90%</span>
+        </div>
+
+        <div class="skill">
+            <span class="skill-name">CSS</span>
+            <div class="progress">
+                <div class="progress-bar" style="width: 85%;"></div>
+            </div>
+            <span class="percentage">85%</span>
+        </div>
+
+        <!-- Add more skills as needed -->
+    </section>
+
+    <section class="photo">
+        <img src="profile_picture.jpg" alt="Profile Picture">
+    </section>
+
+    <footer>
+        <p>&copy; 2023 John Doe</p>
+    </footer>
+</body>
+</html>
 
